kubernetes-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: backend
          image: adriandeguzman/todo-backend:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: task-storage
              mountPath: /app/tasks.db
              subPath: tasks.db
      volumes:
        - name: task-storage
          persistentVolumeClaim:
            claimName: task-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: todo-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
